--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --config .prettierrc.js --ignore-path .gitignore \"./**/*.{ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
